chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: api-local.bembel.party
      http:
        paths:
          - backend:
              service:
                name: api
                port:
                  name: http
            pathType: Prefix
            path: /
    - host: api.bembel.party
      http:
        paths:
          - backend:
              service:
                name: api
                port:
                  name: http
            pathType: Prefix
            path: /
  tls:
    - hosts:
        - api.bembel.party
        - api-local.bembel.party
      secretName: api-cert
